--- a/index.css
+++ b/index.css
@@ -1,27 +1,18 @@
-html,
-body {
-	padding: 0;
-	margin: 0;
-}
-
-body {
-	font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif;
-}
-
 header {
-	position: absolute;
-	width: 500px;
-	height: 250px;
-	top: 50%;
-	left: 50%;
-	margin-top: -125px;
-	margin-left: -250px;
+	text-align: center;
+	font-size: 30px;
+}
+
+section {
+	margin: 10px;
 	text-align: center;
 }
 
-header h1 {
-	font-size: 60px;
-	font-weight: 100;
-	margin: 0;
-	padding: 0;
+#Log {
+	background: #f2f2f2;
+	width: 800px;
+	height: 300px;
+	border-radius: 5px;
+	overflow: scroll;
+	margin: 10px auto;
 }
